# simplessd_fully_system

./: .gitignore  Dockerfile  Makefile
script/: disk_init.sh
src/dev/storage/simplessd/: CMakeLists.txt
src/dev/storage/simplessd/config/: sample.cfg
src/dev/storage/simplessd/cpu/generator/: compile.py
src/dev/storage/simplessd/ftl/: block_mapping.cc  block_mapping.hh  config.hh  ftl.cc
src/dev/storage/simplessd/hil/: hil.cc  hil.hh
src/dev/storage/simplessd/hil/nvme/: def.hh  namespace.cc  namespace.hh  subsystem.cc  subsystem.hh
src/dev/storage/simplessd/ims/: CMakeLists.txt  Makefile  README.md
src/dev/storage/simplessd/ims/db/: CMakeLists.txt  Makefile
src/dev/storage/simplessd/ims/db/src/db_engine/: main.cc  main.hh  nvme_interface_test.cc
src/dev/storage/simplessd/ims/db/src/db_nvme/: nvme_config.hh  nvme_interface.cc  nvme_interface.hh
src/dev/storage/simplessd/ims/firmware/: CMakeLists.txt  IMS_interface.cc  IMS_interface.hh  case.txt  def.hh  disk.cc  disk.hh  lbn_pool.cc  lbn_pool.hh  log.cc  log.hh  main.cc  mapping_table.cc  mapping_table.hh  persistence.cc  persistence.hh  print.hh  tree.cc  tree.hh
src/dev/storage/simplessd/ims/tests/: CMakeLists.txt  disk_test.cc  initandClose_ims.cc  interface_test.cc  lbnPolicy_test.cc  lbnPool_test.cc  mappingTable_test.cc  persistence_test.cc  readwrite_SStable_test.cc  tree_test.cc
src/dev/storage/simplessd/sim/: log.cc  trace.hh
src/dev/storage/simplessd/util/: def.cc  def.hh  disk.cc  disk.hh
system/alpha/console/: console.c
util/streamline/: atomic_stat_config.ini
